# BFFpp

./: .gitignore  CMakeLists.txt  FORWARD_PASS_README.md  README.md  analyze_tokens.py
configs/: base_config.yaml  darwin_config.yaml  darwin_left.yaml  darwin_merged.yaml  darwin_right.yaml  darwin_test.yaml  grid_config.yaml  grid_live_test.yaml  grid_test_config.yaml  small_config.yaml  test_comparison.yaml  test_config.yaml  test_config2.yaml  test_large.yaml  test_pairing.yaml  token_test.yaml
data/: live_darwin.html  live_grid_w_tracer.html  live_visualization.html
data/pairings/: forward_pass_results.csv  pairings_epoch_0005.csv  pairings_epoch_0006.csv  pairings_epoch_0007.csv  pairings_epoch_0008.csv  pairings_epoch_0009.csv  pairings_epoch_0010.csv
data/pairings_cleaned/: pairings_epoch_0005.csv  pairings_epoch_0006.csv  pairings_epoch_0007.csv  pairings_epoch_0008.csv  pairings_epoch_0009.csv  pairings_epoch_0010.csv
include/: config.h  emulator.h  emulator_w_tracer.h  grid.h  grid_w_tracer.h  metrics.h  utils.h  websocket_server.h
python/: forward_pass.py
python/test_data/: compression_distance_tree.html  evolutionary_tree.html  forward_pass_results.csv  pairings_epoch_16324.csv  pairings_epoch_16325.csv  pairings_epoch_16326.csv  pairings_epoch_16327.csv  pairings_epoch_16328.csv  pairings_epoch_16329.csv  pairings_epoch_16330.csv  pairings_epoch_16331.csv  pairings_epoch_16332.csv  pairings_epoch_16333.csv  pairings_epoch_16334.csv  pairings_epoch_16335.csv  pairings_epoch_16336.csv  pairings_epoch_16337.csv  pairings_epoch_16338.csv  pairings_epoch_16339.csv  pairings_epoch_16340.csv  pairings_epoch_16341.csv  pairings_epoch_16342.csv  pairings_epoch_16343.csv  pairings_epoch_16344.csv  pairings_epoch_16345.csv  pairings_epoch_16346.csv  pairings_epoch_16347.csv  pairings_epoch_16348.csv  pairings_epoch_16349.csv  pairings_epoch_16350.csv  pairings_epoch_16351.csv  pairings_epoch_16352.csv  pairings_epoch_16353.csv  pairings_epoch_16354.csv  pairings_epoch_16355.csv  pairings_epoch_16356.csv  pairings_epoch_16357.csv  pairings_epoch_16358.csv  pairings_epoch_16359.csv  pairings_epoch_16360.csv  (+44 more)
src/: analyze_neighborhood_hoe.cpp  clean_pairing_csv.cpp  config.cpp  emulator.cpp  emulator_w_tracer.cpp  forward_pass_analysis.cpp  grid.cpp  grid_w_tracer.cpp  main.cpp  main_darwin.cpp  main_grid.cpp  main_grid_w_tracer.cpp  metrics.cpp  test_emulator.cpp  test_emulator_equivalence.cpp  test_emulator_w_tracer.cpp  test_emulator_w_tracer_verbose.cpp  test_epoch_by_epoch.cpp  test_grid_comparison.cpp  test_rng_debug.cpp  test_simple_decrement.cpp  utils.cpp  websocket_server.cpp
